<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToDoApp.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBarAddTask"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="New Task"
            android:background="@color/colorPrimary"
            android:theme="@style/ToDoApp.PopUpOverlay"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/task_title"
        android:textColor="@color/Accent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:hintTextColor="@color/Accent"
        app:boxStrokeColor="@color/Accent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task_title"
            android:inputType="textCapWords"
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/what_is_to_be_done"
        android:textColor="@color/Accent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskInpLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:hintTextColor="@color/Accent"
        app:boxStrokeColor="@color/Accent">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_task"
            android:textSize="18sp"
            android:gravity="start"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:lines="3"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:text="@string/set_reminder_date_and_time"
        android:textColor="@color/Accent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:hintTextColor="@color/Accent"
        app:boxStrokeColor="@color/Accent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_date"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/baseline_date_range_24"
            android:drawableTint="@color/Accent"
            android:focusable="false"
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:visibility="gone"
        android:id="@+id/timeInpLay"
        app:hintTextColor="@color/Accent"
        app:boxStrokeColor="@color/Accent">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/timeEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_time"
            android:clickable="true"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/baseline_access_time_24"
            android:drawableTint="@color/Accent"
            android:focusable="false"
            android:textSize="18sp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">
        
        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="16dp"/>
        <ImageView
            android:id="@+id/imgAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_playlist_add_24"
            app:tint="@color/Accent" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        android:text="@string/save_task"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="25dp"
        android:backgroundTint="@color/Accent"/>

</LinearLayout>